# ffxiv-crafting

./: .gitattributes  .gitignore  Api.md  Cargo.toml  README.md  TODO.txt  check.sh  docker-compose.yml  in_crafting_list.txt  in_custom_list.txt
crates/: .gitignore  Cargo.toml  startup.sh
crates/async_processor/: Cargo.toml
crates/async_processor/src/: arw_value.rs  async_processor.rs  lib.rs
crates/ffxiv_items/: Cargo.toml
crates/ffxiv_items/src/: csv_content.rs  csv_parse.rs  filter.rs  github_metadata.rs  item_db.rs  item_db_filter.rs  item_db_items.rs  item_db_query.rs  item_id.rs  item_info.rs  lib.rs  library.rs  library_test_data.rs  main.rs  query.rs  recipe.rs  util.rs
crates/ffxiv_items/src/db/: filter.rs  ingredient_table.rs  input_ids.rs  item_db.rs  item_db_filter.rs  item_db_items.rs  item_info_table.rs  mod.rs  recipe_table.rs  table.rs  ui_category_table.rs
crates/ffxiv_items/src/parsers/: craft_leve_list.rs  item_list.rs  job_category_list.rs  leve_list.rs  mod.rs  recipe_level_list.rs  recipe_list.rs  ui_category_list.rs
crates/ffxiv_items/src/tables/: ingredient_table.rs  input_ids_table.rs  item_info_table.rs  mod.rs  recipe_table.rs  table.rs  ui_category_table.rs  update_table.rs
crates/ffxiv_items/tests/: integration_tests.rs
crates/ffxiv_server/: .gitignore  Cargo.toml  startup.sh
crates/ffxiv_server/src/: cli.rs  gen_listing.rs  general_listing.rs  main.rs  market_ws.rs  recipe.rs  responses.rs  server.rs
crates/ffxiv_server/src/market/: cancel.rs  get.rs  mod.rs  put.rs  state.rs
crates/ffxiv_server/src/universalis/: handles.rs  mod.rs  recipes.rs  types.rs  websocket.rs
crates/ffxiv_universalis/: Cargo.toml
crates/ffxiv_universalis/src/: async_processor.rs  handle.rs  json.rs  json_types.rs  lib.rs  market_request_type.rs  multi_signal.rs  processor.rs  processor_data.rs  request.rs  request_type.rs  status.rs  universalis_json.rs  universalis_processor.rs  universalis_status.rs
crates/ffxiv_universalis/src/processor/: handle.rs  mod.rs  packet.rs  processor.rs  processor_data.rs  request_builder.rs  status.rs
crates/ffxiv_universalis/src/universalis/: async_processor.rs  json.rs  json_types.rs  mod.rs  request.rs  request_type.rs
crates/ffxiv_universalis/tests/: integration_tests.rs
crates/ffxiv_universalis/tests/mock_server/: mod.rs
crates/mock_traits/: Cargo.toml
crates/mock_traits/src/: file_downloader.rs  lib.rs
docs/: api.md  query-format.md
ffxiv-crafting-server/: Cargo.toml
ffxiv-crafting-server/src/: main.rs
ffxiv-crafting-server/src/server/: recipe.rs  server.rs  util.rs
ffxiv-crafting-server/src/universalis/: gen_listing.rs  json.rs  mod.rs
ffxiv-crafting-server/src/util/: am_value.rs  async_counter.rs  async_processor.rs  util.rs
ffxiv_items/: Cargo.toml
ffxiv_items/src/: filter.rs  item_info.rs  lib.rs  library.rs  recipe.rs  util.rs
ffxiv_items/src/craft_list/: craft_list.rs  filters.rs
ffxiv_items/src/parsers/: gathering_list.rs  item_list.rs  leve_list.rs  mod.rs  recipe_level_list.rs  recipe_list.rs
ffxiv_server/: Cargo.toml  in_crafting_list.txt  in_custom_list.txt
ffxiv_server/src/: cli.rs  gen_listing.rs  main.rs  recipe.rs  server.rs  util.rs
ffxiv_server/src/server/: gen_listing.rs  mod.rs  recipe.rs  server.rs  util.rs
ffxiv_server/src/universalis/: builder.rs  processor.rs  status.rs
ffxiv_server/src/util/: mod.rs
ffxiv_universalis/: Cargo.toml
ffxiv_universalis/src/: am_value.rs  async_processor.rs  builder.rs  fetch_listing_type.rs  lib.rs  processor.rs  status.rs  universalis_json.rs  universalis_processor.rs  universalis_status.rs
ffxiv_universalis/src/util/: async_processor.rs  mod.rs
frontend/: .gitignore  next.config.js  package.json  pnpm-lock.yaml  startup.sh  tsconfig.json
frontend-ts/: package-lock.json  tsconfig.json
frontend-ts/src/custom/: statistics.ts
frontend/src-js/: index.html  index.less
frontend/src-nextjs/: .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml  startup.sh
frontend/src-nextjs/src/app/: colors.less  global.less  header.module.less  header.tsx  index.module.less  layout.tsx  page.tsx
frontend/src-ts/: startup.sh  tsconfig.json
frontend/src-ts/src/: exchange.ts  headers.ts
frontend/src-ts/src/custom/: custom.ts  custom_info.ts  market_request_ws.ts  purchases.ts  rec_statistics.ts  statistics.ts  universalis_api.ts
frontend/src-ts/src/util/: api.ts  elem.ts
frontend/src/app/: colors.less  context.tsx  global.less  header.tsx  layout.tsx  main.module.less  mixins.less  page.tsx
frontend/src/app/(config)/: config-state.tsx  config.module.less  config.tsx
frontend/src/app/(exchange)/: exchange-state.ts  exchange-state.tsx  exchange.module.less  exchange.tsx  fetch-exchange-info.ts  rewards.ts
frontend/src/app/(fetch-status)/: fetch-status.module.less  fetch-status.tsx
frontend/src/app/(firmament)/: firmament.tsx  rewards.ts
frontend/src/app/(query)/: context.tsx  purchase.tsx  query-data-calc.ts  query-data-ui.ts  query-data-universalis.ts  (+9 more)
js/: crafts.js  crafts.json  custom.js  harness.html  harness.less  tables.js  util.js
nginx/: nginx.conf
src/: cli.rs  main.rs  market_board_analysis.rs  util.rs
src-ts/: package-lock.json  package.json  tsconfig.json
src-ts/src/: api.ts  checked_tree_control.ts  elem.ts  exchange.ts  filters.ts  headers.ts  tables.ts  util.ts
src-ts/src/custom/: custom.ts  custom_info.ts  purchases.ts  rec_statistics.ts  statistics.ts
src-ts/src/tables/: checked_tree_control.ts  tables.ts
src-ts/src/util/: api.ts
src-web/: crafting-mats.json  harness.html  harness.less  index.html  purple-scrips.json
src/new_universalis/: builder.rs  json.rs  mod.rs  processor.rs
src/server/: custom.rs  custom_old.rs  custom_util.rs  files.rs  mod.rs  server.rs
src/universalis/: json.rs  mod.rs  processor.rs  universalis.rs
src/util/: am_value.rs  amo_value.rs  async_counter.rs  async_processor.rs  mod.rs  util.rs
ts/: package-lock.json  tsconfig.json
ts/src/: exchange.ts  filters.ts  util.ts
ts/src/custom/: custom.ts  custom_info.ts  statistics.ts
(+70 files in other folders)
