[package]
name = "ffxiv-crafting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.137", features=["derive"] }
tokio = { version="1.18.2", features=["full"] }
tokio-stream = { version="0.1.8", features=["time"] }
tower-http = { version = "0.3.4", features = ["cors"] }
clap = { version="3.1.18", features=["cargo"] }
reqwest = "0.11.10"
serde_json = "1.0.82"
itertools = "0.10.3"
futures = "0.3.21"
anyhow = "1.0.57"
csv = "1.1.6"
regex = "1.5.6"
chrono = "0.4.19"
axum = "0.5.13"
mime_guess = "2.0.4"
axum-macros = "0.2.3"

[profile.release]
debug = true
