[workspace]
members = [
    "ffxiv_items",
    "ffxiv_server",
    "ffxiv_universalis",
    "async_processor",
    "mock_traits",
]
resolver = "2"

[profile.release-debug]
inherits = "release"
debug = true

[profile.docker]
inherits = "release"
incremental = true
lto = "thin"

[profile.docker-no-lto]
inherits = "docker"
lto = "off"
