[package]
name = "ffxiv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.137", features = ["derive"] }
tokio = { version="1.18.2", features = ["rt-multi-thread", "fs"] }
tower-http = { version = "0.3.4", features = ["cors"] }
clap = { version="3.1.18", features = ["cargo"] }
uuid = { version = "1.2.2", features = ["v4"] }
axum = "0.6.3"
axum-macros = "0.3.1"
reqwest = "0.11.10"
serde_json = "1.0.82"
itertools = "0.10.3"
futures = "0.3.21"
anyhow = "1.0.57"
csv = "1.1.6"
regex = "1.5.6"
chrono = "0.4.19"
mime_guess = "2.0.4"
parking_lot = "0.12.1"
console-subscriber = "0.1.8"
log = "0.4.17"
log4rs = "1.2.0"
ffxiv_items = { version = "0.1.0", path = "../ffxiv_items" }

[profile.docker]
inherits="release"
lto = "thin"
