[package]
name = "ffxiv_universalis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
parking_lot = "0.12.1"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = "1.32.0"
