[package]
name = "async_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
futures = "0.3.28"
log = "0.4.20"
parking_lot = "0.12.1"
tokio = { version = "1.32.0", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time"] }
