[package]
name = "ffxiv_items"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
regex = "1.9.5"
reqwest = "0.11.20"
