[package]
name = "ffxiv_items"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio", "mysql", "macros"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
csv = "1.2.2"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
reqwest = "0.11.20"
const_format = "0.2.31"
tuple-conv = "1.0.1"
env_logger = "0.10.0"
chrono = "0.4.31"
