[package]
name = "ffxiv_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.188", features = ["derive"] }
tokio = { version="1.32.0", features = ["rt-multi-thread", "fs", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["v4"] }
reqwest = { version = "0.11.20", features = [] }
axum = { version = "0.6.20", features = ["tokio"] }
axum-macros = "0.3.8"
itertools = "0.11.0"
futures = "0.3.28"
anyhow = "1.0.75"
log = "0.4.20"
log4rs = { version = "1.2.0", features = [] }
ffxiv_items = { version = "0.1.0", path = "../ffxiv_items" }
ffxiv_universalis = { version = "0.1.0", path = "../ffxiv_universalis" }

[profile.docker]
inherits = "release"
incremental = true
lto = "thin"
