[package]
name = "ffxiv_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "fs", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["v4"] }
axum = { version = "0.6.20", features = ["tokio", "ws"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
futures = "0.3.28"
log = "0.4.20"
ffxiv_items = { version = "0.1.0", path = "../ffxiv_items" }
ffxiv_universalis = { version = "0.1.0", path = "../ffxiv_universalis" }
mock_traits = { version = "0.1.0", path = "../mock_traits" }
axum-macros = "0.3.8"
env_logger = "0.10.0"
chrono = "0.4.31"
serde_json = "1.0.107"
flate2 = "1.0.28"
