[package]
name = "ffxiv_universalis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
anyhow = "1.0.75"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
reqwest = "0.11.20"
serde_json = "1.0.107"
async_processor = { version = "0.1.0", path = "../async_processor" }
